[package]
name = "rustitude-gluex"
version = "0.1.1"
edition = "2021"
authors = ["Nathaniel Dene Hoffman <dene@cmu.edu>"]
description = "GlueX Amplitudes for Rustitude"
repository = "https://github.com/denehoffman/rustitude-gluex/"
homepage = "https://github.com/denehoffman/rustitude-gluex/"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
nalgebra = "0.32.5"
num-complex = "0.4.5"
rayon = "1.10.0"
rustitude = "0.3.1"
sphrs = "0.2.2"
