[package]
name = "rustitude-gluex"
version = "0.1.2"
edition = "2021"
authors = ["Nathaniel Dene Hoffman <dene@cmu.edu>"]
description = "GlueX Amplitudes for Rustitude"
repository = "https://github.com/denehoffman/rustitude-gluex/"
homepage = "https://github.com/denehoffman/rustitude-gluex/"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
factorial = "0.4.0"
nalgebra = "0.32.5"
num-complex = "0.4.5"
rayon = "1.10.0"
rustitude-core = { path = "../rustitude-core", version = "0.3.2" }
sphrs = "0.2.2"
wigner-symbols = "0.5.0"
