[package]
name = "rustitude-gluex"
version = "0.1.5"
edition = "2021"
authors = ["Nathaniel Dene Hoffman <dene@cmu.edu>"]
description = "GlueX Amplitudes for Rustitude"
repository = "https://github.com/denehoffman/rustitude-gluex/"
homepage = "https://github.com/denehoffman/rustitude-gluex/"
license = "BSD-3-Clause"
readme = "README.md"

[dependencies]
factorial = "0.4.0"
nalgebra = "0.32.5"
num-complex = "0.4.5"
pyo3 = "0.21.2"
rayon = "1.10.0"
rustitude-core = { version = "0.3.4", git = "https://github.com/denehoffman/rustitude-core.git", branch = "rethinking_grouping_structures" }
sphrs = "0.2.2"
